--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dropzone": "^14.2.3",
     "react-firebase-hooks": "^5.1.1",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
