--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-firebase-hooks": "^5.1.1",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
     "web-vitals": "^2.1.4"
