--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "kleur": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-dropzone": "^14.2.3",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.15.0",
